// Tencent is pleased to support the open source community by making Blueking Container Service available.
// Copyright (C) 2022 THL A29 Limited, a Tencent company. All rights reserved.
// Licensed under the MIT License (the "License"); you may not use this file except
// in compliance with the License. You may obtain a copy of the License at
//
// http://opensource.org/licenses/MIT
//
// Unless required by applicable law or agreed to in writing, software distributed under,
// the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
// either express or implied. See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bcsproject;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "validate/validate.proto";


option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info : {
      title : "BCS Project API Doc" 
      version : "0.0.1"
    };
    schemes : HTTP 
    consumes : "application/json" 
    produces : "application/json"
  };

service BCSProject {
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {
    option (google.api.http) = {
      post : "/bcs-project/v1/project"
      body : "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description : "创建项目信息"
      summary : "创建项目"
    };
  }
}


message Project {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "Project"
      description : "项目的基本信息"
    }
  };

  string createTime = 1[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "createTime", 
      description: "创建时间"
  }];
  string updateTime = 2[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "updateTime", 
      description: "更新时间"
  }];
  string creator = 3[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "creator", 
      description: "项目创建者"
  }];
  string updater = 4[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "updater", 
      description: "项目更新者"
  }];
  string projectID = 5[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "projectID", 
      description: "项目ID, 全局唯一, 长度为32位字符串, 自动生成"
  }];
  string name = 6[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "name", 
      description: "项目中文名称, 长度不能超过64字符"
  }];
  string englishName = 7[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "englishName", 
      description: "项目英文缩写, 全局唯一, 长度不能超过32字符"
  }];
  
  bool useBKRes = 8[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "useBKRes", 
      description: "是否使用蓝鲸提供的资源池, 主要用于资源计费, 默认false"
  }];
  string description = 9[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "description", 
      description: "项目描述, 尽量限制在100字符"
  }];
  bool isOffline = 10[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "isOffline", 
      description: "项目是否已经下线, 默认false"
  }];
  string kind = 11[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "kind", 
      description: "项目中集群类型, 可选k8s/mesos"
  }];
  string businessID = 12[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "businessID", 
      description: "项目绑定的蓝鲸CMDB中业务ID信息"
  }];
  bool isSecret = 13[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title: "isSecret", 
    description: "是否为保密项目, 默认为false"
  }];
  uint32 projectType = 14[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title: "type", 
    description: "项目类型, 保留字段, 默认为0, 可选 1:手游, 2:端游, 3:页游, 4:平台产品, 5:支撑产品"
  }];
  uint32 deployType = 15[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "deployType", 
      description: "业务部署类型, 保留字段, 1:物理机部署, 2:容器部署"
  }];
  string bgID = 16[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "bgID",
      description: "事业群ID, 保留字段, 默认为0"
  }];
  string bgName = 17[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "bgName", 
      description: "事业群名称, 保留字段, 默认为空"
  }];
  string deptID = 18[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "deptID", 
      description: "部门ID, 保留字段, 默认为0"
  }];
  string deptName = 19[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "deptName", 
      description: "部门名称, 保留字段, 默认为空"
  }];
  string centerID = 20[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "centerID", 
      description: "中心ID, 保留字段, 默认为0"
  }];
  string centerName = 21[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "centerName", 
      description: "中心名称, 保留字段, 默认为空"
  }];
}


message CreateProjectRequest {
  option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
    json_schema : {
      title : "CreateProjectRequest"
      description : "创建项目"
      required : [
        "name",
        "englishName",
        "creator"
      ]
    }
  };

  string createTime = 1[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title: "createTime", 
    description: "创建时间"
  }];
  string creator = 2[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "creator", 
      description: "项目创建者"
  }];
  string projectID = 3[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "projectID", 
      description: "项目ID, 全局唯一, 长度为32位字符串, 自动生成"
  }];
  string name = 4[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "name", 
      description: "项目中文名称, 长度不能超过64字符"
  }, (validate.rules).string = {min_len: 2, max_len: 64}];
  string englishName = 5[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "englishName", 
      description: "项目英文缩写, 全局唯一, 长度不能超过32字符"
  }, (validate.rules).string = {min_len: 2, max_len: 32}];

  bool useBKRes = 6[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "useBKRes", 
      description: "是否使用蓝鲸提供的资源池, 主要用于资源计费, 默认false"
  }];
  string description = 7[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "description", 
      description: "项目描述, 尽量限制在100字符"
  }];
  bool isOffline = 8[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "isOffline", 
      description: "项目是否已经下线, 默认false"
  }];
  string kind = 9[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "kind", 
      description: "项目中集群类型, 可选k8s/mesos"
  }];
  string businessID = 10[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "businessID", 
      description: "项目绑定的蓝鲸CMDB中业务ID信息"
  }];
  bool isSecret = 11[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title: "isSecret", 
    description: "是否为保密项目, 默认为false"
  }];
  uint32 projectType = 12[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title: "type", 
    description: "项目类型, 保留字段, 默认为0, 可选 1:手游, 2:端游, 3:页游, 4:平台产品, 5:支撑产品"
  }];
  uint32 deployType = 13[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "deployType", 
      description: "业务部署类型, 保留字段, 1:物理机部署, 2:容器部署"
  }, (validate.rules).uint32 = {in: [1, 2]}];
  string bgID = 14[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "bgID",
      description: "事业群ID, 保留字段, 默认为0"
  }];
  string bgName = 15[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "bgName", 
      description: "事业群名称, 保留字段, 默认为空"
  }];
  string deptID = 16[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "deptID", 
      description: "部门ID, 保留字段, 默认为0"
  }];
  string deptName = 17[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "deptName", 
      description: "部门名称, 保留字段, 默认为空"
  }];
  string centerID = 18[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "centerID", 
      description: "中心ID, 保留字段, 默认为0"
  }];
  string centerName = 19[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
      title: "centerName", 
      description: "中心名称, 保留字段, 默认为空"
  }];
}

message CreateProjectResponse {
  uint32 code = 1[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title : "code", 
    description: "返回错误码"
  }];
  string message = 2[ (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title : "message",
    description: "返回错误信息"
  }];
  bool data = 3[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
    title: "data", 
    description: "返回结果"
  }];
  string requestID = 4[(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
		title: "request id",
    description: "请求 ID"
	}];
}
  